# Classifiez-automatiquement-les-informations

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  config.py  encoder.pkl  main.py  model.pkl  pyproject.toml  requirements.txt  threshold.pkl
.github/workflows/: cd.yaml  ci.yaml  ci_cd.yaml
data/clean/: final_dataset.csv
database/: create_tables.sql  insert_db.py  roles_and_permissions.sql
docs/: API_Documentation_openapi.json
models/: model.pkl  threshold.pkl
notebooks/: Notebook.ipynb
src/: api.py  build_features.py  data_loader.py  data_preprocess.py  data_process.py  evaluate_model.py  model_evaluation.py  model_training.py  schemas.py  train_model.py  utils.py
tests/: test_build_features.py  test_data_loader.py  test_data_preprocess.py  test_evaluate_model.py  test_model_evaluation.py  test_model_training.py  test_train_model.py  test_utils.py
tests/functional/: conftest.py  test_database.py  test_db_failure.py  test_employee.py  test_health.py  test_model_robustness.py  test_performance.py  test_predict.py  test_reproductability.py  test_root.py
tests/unit/: test_data_process.py  test_train_model.py
